# atlas-ai-cornil

./: .gitignore  Modelfile  README.md  atlas_chat.py  pyproject.toml
atlas/: __init__.py  cli.py  guardrails.py  llm.py  memory.py  monitoring.py
atlas/config/: schema.py
config/: atlas.yaml  schema.py
docs/: ADR-001-choix-ollama.md  README.md  architecture.md  configuration.md  governance.md  installation.md  monitoring.md  operations.md  security.md
scripts/: analyze_traces.py  test_ollama.py
tests/: __init__.py  test_guardrails.py  test_ollama.py
